--- a/pages/wahlautomat/wahlautomat.html
+++ b/pages/wahlautomat/wahlautomat.html
@@ -28,8 +28,7 @@
     <div id="question"></div>
     <div class="text-box">
         <h2>Disclaimer</h2>
-        <p> Dies ist nur ein Wahl-Auto-Mat für eine Schulinterne 
-            Wahl. Er ist stark am <a href="https://www.wahl-o-mat.de/" target="_blank">Wahl-O-Mat</a> 
+        <p> Dies "Wahl-Auto-Mat" ist stark am <a href="https://www.wahl-o-mat.de/" target="_blank">Wahl-O-Mat</a> 
             des bpb (Bundeszentrale für politische Bildung) inspiriert.
             Die Fragen und Antworten sind frei erfunden und haben
             keinen Bezug zu realen Personen oder Parteien.
