--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./style/text.css">
     <link rel="stylesheet" href="./style/text-box.css">
     <link rel="stylesheet" href="./style/index-boxen.css">
+    <link rel="manifest" href="./site.webmanifest">
     <title>Home</title>
     <script defer src="./scripts/autofill.js"></script>
     <script defer src="./fiels.js"></script>
