--- a/impressum.html
+++ b/impressum.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./style/imgaes.css">
     <link rel="stylesheet" href="./style/flex-boxen.css">
     <link rel="stylesheet" href="./style/horizontal-list.css">
+    <link rel="manifest" href="./site.webmanifest">
     <title>Impressum</title>
     <script defer src="./scripts/autofill.js"></script>
     <script defer src="./fiels.js"></script>
