--- a/pages/polyrhymik/polyrhymik.html
+++ b/pages/polyrhymik/polyrhymik.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../../style/text-box.css">
     <link rel="stylesheet" href="../../style/text.css">
     <link rel="stylesheet" href="polyrhymik.css">
+    <link rel="manifest" href="./site.webmanifest">
     <title>Polyrhythmik</title>
     <script defer src="../../scripts/autofill.js"></script>
     <script defer src="../../scripts/button.js"></script>
