--- a/pages/wahlautomat/wahlautomat.html
+++ b/pages/wahlautomat/wahlautomat.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="../../style/imgaes.css">
     <link rel="stylesheet" href="../../style/horizontal-split.css">
     <link rel="stylesheet" href="./wahlautomat.css">
+    <link rel="manifest" href="../../site.webmanifest">
     <title>Wahl-Auto-Mat</title>
     <script defer src="../../scripts/autofill.js"></script>
     <script defer src="../../scripts/button.js"></script>
