--- a/pages/woerdle/woerdle.html
+++ b/pages/woerdle/woerdle.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../../style/table.css">
     <link rel="stylesheet" href="../../style/horizontal-split.css">
     <link rel="stylesheet" href="./woerdle.css">
+    <link rel="manifest" href="../../site.webmanifest">
     <title>Wördle</title>
     <script defer src="../../scripts/autofill.js"></script>
     <script defer src="../../scripts/button.js"></script>
