--- a/pages/woerdle/woerdle.html
+++ b/pages/woerdle/woerdle.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../images/icon.png">
+    <link rel="icon" type="image/png" href="../../images/icon.png">
     <link rel="stylesheet" href="../../style/varibles.css">
     <link rel="stylesheet" href="../../style/buttons.css">
     <link rel="stylesheet" href="../../style/footer.css">
